--- a/exercises/ex09/SimpyDemos.ipynb
+++ b/exercises/ex09/SimpyDemos.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -711,14 +711,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 273,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.30000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "max_temps = Simpy([21.0, 30.0, 41.0, 31.0, 45.0, 31.5])\n",
     "precip = Simpy([0.0, 1.5, 0.1, 0.3, 0.2, 0.8])\n",
     "\n",
-    "# TODO: Your solution goes here."
+    "mask: list[bool] = (max_temps > 32)\n",
+    "\n",
+    "temp_over_32 = precip[mask]\n",
+    "\n",
+    "precip_temp_over_32 = temp_over_32.sum()\n",
+    "print(precip_temp_over_32)"
    ]
   },
   {
