--- a/exercises/ex09/SimpyDemos.ipynb
+++ b/exercises/ex09/SimpyDemos.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -95,14 +95,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simpy([1.0, 1.0, 1.0, 1.0, 1.0]\n"
+      "Simpy([1.0, 1.0, 1.0, 1.0, 1.0])\n"
      ]
     }
    ],
@@ -128,17 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([2.0, 2.0, 2.0]  - Expected: Simpy([2.0, 2.0, 2.0])\n",
-      "Actual:  Simpy([2.0, 2.0, 2.0, 2.0, 2.0]  - Expected: Simpy([2.0, 2.0, 2.0, 2.0, 2.0])\n",
-      "Actual:  Simpy([3.0, 3.0, 3.0]  - Expected: Simpy([3.0, 3.0, 3.0])\n",
-      "Actual:  Simpy([2.0, 2.0]  - Expected: Simpy([2.0, 2.0])\n"
+      "Actual:  Simpy([2.0, 2.0, 2.0])  - Expected: Simpy([2.0, 2.0, 2.0])\n",
+      "Actual:  Simpy([2.0, 2.0, 2.0, 2.0, 2.0])  - Expected: Simpy([2.0, 2.0, 2.0, 2.0, 2.0])\n",
+      "Actual:  Simpy([3.0, 3.0, 3.0])  - Expected: Simpy([3.0, 3.0, 3.0])\n",
+      "Actual:  Simpy([2.0, 2.0])  - Expected: Simpy([2.0, 2.0])\n"
      ]
     }
    ],
@@ -173,16 +173,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([1.0, 2.0, 3.0, 4.0]  - Expected: Simpy([1.0, 2.0, 3.0, 4.0])\n",
-      "Actual:  Simpy([0.0, 0.25, 0.5, 0.75]  - Expected: Simpy([0.0, 0.25, 0.5, 0.75])\n",
-      "Actual:  Simpy([-1.0, -2.0, -3.0, -4.0]  - Expected: Simpy([-1.0, -2.0, -3.0, -4.0])\n"
+      "Actual:  Simpy([1.0, 2.0, 3.0, 4.0])  - Expected: Simpy([1.0, 2.0, 3.0, 4.0])\n",
+      "Actual:  Simpy([0.0, 0.25, 0.5, 0.75])  - Expected: Simpy([0.0, 0.25, 0.5, 0.75])\n",
+      "Actual:  Simpy([-1.0, -2.0, -3.0, -4.0])  - Expected: Simpy([-1.0, -2.0, -3.0, -4.0])\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -268,16 +268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([3.0, 4.0, 5.0]  - Expected: Simpy([3.0, 4.0, 5.0])\n",
-      "Actual:  Simpy([2.0, 2.0, 2.0]  - Expected: Simpy([2.0, 2.0, 2.0])\n",
-      "Actual:  Simpy([4.0, 6.0, 8.0]  - Expected: Simpy([4.0, 6.0, 8.0])\n"
+      "Actual:  Simpy([3.0, 4.0, 5.0])  - Expected: Simpy([3.0, 4.0, 5.0])\n",
+      "Actual:  Simpy([2.0, 2.0, 2.0])  - Expected: Simpy([2.0, 2.0, 2.0])\n",
+      "Actual:  Simpy([4.0, 6.0, 8.0])  - Expected: Simpy([4.0, 6.0, 8.0])\n"
      ]
     }
    ],
@@ -294,15 +294,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([11.0, 12.0, 13.0]  - Expected: Simpy([11.0, 12.0, 13.0])\n",
-      "Actual:  Simpy([2.0, 3.0, 4.0]  - Expected: Simpy([2.0, 3.0, 4.0])\n"
+      "Actual:  Simpy([11.0, 12.0, 13.0])  - Expected: Simpy([11.0, 12.0, 13.0])\n",
+      "Actual:  Simpy([2.0, 3.0, 4.0])  - Expected: Simpy([2.0, 3.0, 4.0])\n"
      ]
     }
    ],
@@ -344,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([2.0, 4.0, 8.0]  - Expected: Simpy([2.0, 4.0, 8.0])\n",
-      "Actual:  Simpy([4.0, 4.0, 4.0]  - Expected: Simpy([4.0, 4.0, 4.0])\n",
-      "Actual:  Simpy([1.0, 4.0, 27.0]  - Expected: Simpy([1.0, 4.0, 27.0])\n"
+      "Actual:  Simpy([2.0, 4.0, 8.0])  - Expected: Simpy([2.0, 4.0, 8.0])\n",
+      "Actual:  Simpy([4.0, 4.0, 4.0])  - Expected: Simpy([4.0, 4.0, 4.0])\n",
+      "Actual:  Simpy([1.0, 4.0, 27.0])  - Expected: Simpy([1.0, 4.0, 27.0])\n"
      ]
     }
    ],
@@ -370,15 +370,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([1.0, 4.0, 9.0]  - Expected: Simpy([1.0, 4.0, 9.0])\n",
-      "Actual:  Simpy([1.0, 8.0, 27.0]  - Expected: Simpy([1.0, 8.0, 27.0])\n"
+      "Actual:  Simpy([1.0, 4.0, 9.0])  - Expected: Simpy([1.0, 4.0, 9.0])\n",
+      "Actual:  Simpy([1.0, 8.0, 27.0])  - Expected: Simpy([1.0, 8.0, 27.0])\n"
      ]
     }
    ],
@@ -408,16 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Simpy([2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2]\n",
-      "Simpy([0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0]\n",
-      "Simpy([1.0, 2.0, 4.0, 8.0, 16.0, 32.0, 64.0, 128.0, 256.0, 512.0, 1024.0, 2048.0, 4096.0, 8192.0, 16384.0, 32768.0]\n"
+      "Simpy([2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])\n",
+      "Simpy([0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0])\n",
+      "Simpy([1.0, 2.0, 4.0, 8.0, 16.0, 32.0, 64.0, 128.0, 256.0, 512.0, 1024.0, 2048.0, 4096.0, 8192.0, 16384.0, 32768.0])\n"
      ]
     }
    ],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -679,15 +679,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Actual:  Simpy([3.0, 4.0]  - Expected: Simpy([3.0, 4.0])\n",
-      "Actual:  Simpy([1.0, 1.0]  - Expected: Simpy([1.0, 1.0])\n"
+      "Actual:  Simpy([3.0, 4.0])  - Expected: Simpy([3.0, 4.0])\n",
+      "Actual:  Simpy([1.0, 1.0])  - Expected: Simpy([1.0, 1.0])\n"
      ]
     }
    ],
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -733,13 +733,6 @@
     "precip_temp_over_32 = temp_over_32.sum()\n",
     "print(precip_temp_over_32)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
